<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>livox_sdk2</name>
  <version>0.0.0</version>
  <description>Software development kit designed for all Livox lidars.</description>
  <maintainer email="lichtenfeld@sim.tu-darmstadt.de">Jonathan Lichtenfeld</maintainer>

  <license>MIT</license>
  
  <!-- Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>ament_cmake_ros</build_depend>
  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>ament_cmake_ros</build_export_depend>
  <exec_depend>rclcpp</exec_depend>

  <!-- Export for CMake and libraries -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
