<?xml version="1.0"?>
<package format="3">
  <name>livox_sdk2</name>
  <version>0.0.2</version>
  <description>The Livox Lidar SDK for ROS2.</description>
  <maintainer email="lichtenfeld@sim.tu-darmstadt.de">Jonathan Lichtenfeld</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <exec_depend>rclcpp</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
